# TLIO

./: .gitignore  IMU_Data_from_ROSBAG.py  README.md  README_agiros.md  README_gvi.md  export.py
config/: tracking_arena_2021-02-03-13-43-38.yaml
config/sim/: dataset_circle_1000hz.yaml  dataset_circle_blackpc.yaml  dataset_circle_z_not_constant.yaml  dataset_lemniscate.yaml  dataset_lemniscate_1000hz.yaml  dataset_lemniscate_blackpc.yaml  dataset_lemniscate_slow.yaml  dataset_random_1000hz.yaml  dataset_random_blackpc.yaml
config/sim_to_real/: dataset_cpc3_3.yaml  dataset_tracking_arena_2021-02-03-13-43-38.yaml  tracking_arena_2021-02-03-13-43-38.yaml
src/: main_filter.py  main_net.py  plot_filter_results.py  plot_filter_state_debug.py
src/dataloader/: create_dataset_binary_format.py  create_dataset_txt_format.py  create_sequence_binary_format.py  create_sequence_txt_format.py  create_sim_dataset_binary_format.py  create_sim_dataset_txt_format.py  create_sim_to_real_dataset_txt_format.py  data_io.py  dataset_racing.py  debug.py  gen_fb_data.py  gen_racing_data.py  load_racing_data_from_rosbag.py  load_random_trajectories_from_rosbag.py  load_real_flight_bag.py  load_real_flight_bag_sync.py  math_utils.py
src/network/: model_factory.py  test.py  test_original.py  train.py
src/params/: dataloader_params.yaml  (+1 more)
src/scripts/: Split.py  (+17 more)
src/sim_to_real/scripts/hand-eye/handeye_park/: CMakeLists.txt  dependencies.yaml
src/sim_to_real/scripts/hand-eye/handeye_park/include/: handeye_park.h
src/sim_to_real/scripts/hand-eye/handeye_park/src/: run_handeye_park.cpp
(+67 files in other folders)
